--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -59,4 +59,15 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Classroom.Classroom
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Classroom.Classroom
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/Framework/Classroom/ClassroomGameMode_BP.ClassroomGameMode_BP_C
+GlobalDefaultServerGameMode=None
