--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -110,7 +110,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/BlankMap.BlankMap
+GameDefaultMap=/Game/Maps/Labs/IslandCannon.IslandCannon
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Framework/CannonMode.CannonMode_C
 GlobalDefaultServerGameMode=None
